# open-metric-learning

./: .dockerignore  .env_template  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  README_tmp.md  Readme.rst  SECURITY.md  examples.py  fix_ckpt.py  inference_cache.pth  inference_with_groups.py  pyproject.toml  pyrightconfig.json  pyrightconfig_best.json  requirements.txt  reworked_examples.md  setup.cfg  setup.py  test.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: issue-template.md
.github/workflows/: check-pypi.yaml  docker_tests.yaml  pre-commit-workflow.yaml  publish-pypi.yaml  publish-to-pypi.yml  publish-to-test-pypi.yml  publish.yaml  python-versions.yaml  test-pypi.yaml  tests-workflow.yaml  tests.yaml
ci/: Dockerfile  requirements.txt  requirements_audio.txt  requirements_dev.txt  requirements_loggers.txt  requirements_nlp.txt  requirements_optional.txt  requirements_pipelines.txt  requirements_tests.txt
ci_cd/: Dockerfile
configs/criterion/: triplet.yaml  triplet_plain.yaml  triplet_top_with_memory.yaml  (+2 more)
conversion/: unicom_to_onnx.py
docs/: Makefile  conf.py  index.rst  requirements.txt
examples/: README.md  inference.py  retrieval_visualization.ipynb  visualisation_attention.ipynb  visualization.ipynb  visualization_postprocessing.ipynb
oml/: __init__.py  const.py  exceptions.py
oml/ddp/: utils.py  (+2 more)
pipelines/: README.md
tests/: conftest.py  minimal.py  test_build_readme.py  test_imports.py  test_outdated_docs.py  test_short_imports.py  utils.py
(+746 files in other folders)
