[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "open-metric-learning"
version = "0.1.1"
authors = [
    { name = "Aleksei Shabanov", email = "shabanoff.aleksei@gmail.com" },
]
description = "OML is a PyTorch-based framework to train and validate the models producing high-quality embeddings."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/OML-Team/open-metric-learning"
"Bug Tracker" = "https://github.com/OML-Team/open-metric-learning/issues"
